--- a/livingExpenseRecord/app/src/main/res/menu/fragment_record_menu.xml
+++ b/livingExpenseRecord/app/src/main/res/menu/fragment_record_menu.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-<item
-    android:id="@+id/menu_item_save_record"
-    android:icon="@android:drawable/ic_menu_save"
-    android:title="@string/save_record"
-    app:showAsAction="ifRoom|withText"
-    />
+    <item
+        android:id="@+id/menu_item_add_record"
+        android:icon="@android:drawable/ic_menu_add"
+        android:title="@string/add_custom_record"
+        app:showAsAction="ifRoom|withText"
+        />
+    <item
+        android:id="@+id/menu_item_save_record"
+        android:icon="@android:drawable/ic_menu_save"
+        android:title="@string/save_record"
+        app:showAsAction="ifRoom|withText"
+        />
 </menu>
