add cost for others

--- a/livingExpenseRecord/app/src/main/res/layout/fragment_record.xml
+++ b/livingExpenseRecord/app/src/main/res/layout/fragment_record.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     >
     <TextView
         android:layout_width="match_parent"
@@ -54,6 +56,23 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:hint="@string/record_dinner_hint"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/record_others_label"
+        style="?android:listSeparatorTextViewStyle"
+        />
+    <EditText
+        android:id="@+id/record_others"
+        android:maxLines="1"
+        android:maxLength="7"
+        android:inputType="number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:hint="@string/record_others_hint"
         />
     <TextView
         android:layout_width="match_parent"
