--- a/livingExpenseRecord/app/src/main/res/layout/list_item_groupedbarchart.xml
+++ b/livingExpenseRecord/app/src/main/res/layout/list_item_groupedbarchart.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="wrap_content">
 
-    <ListView
-        android:id="@+id/listView_chart"
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/GroupedBarChart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    </ListView>
+        android:layout_height="280dp" />
 
 </LinearLayout>
