--- a/livingExpenseRecord/app/src/main/res/layout/marker_view.xml
+++ b/livingExpenseRecord/app/src/main/res/layout/marker_view.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="40dp"
-    android:background="@drawable/marker2" >
+    android:layout_width="100dp"
+    android:layout_height="72dp"
+    android:background="@drawable/marker1" >
 
     <TextView
         android:id="@+id/tvContent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:text=""
         android:textSize="12sp"
         android:textColor="@android:color/white"
         android:ellipsize="end"
-        android:maxLines="1"
+        android:maxLines="3"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </RelativeLayout>
