--- a/livingExpenseRecord/app/src/main/res/layout/activity_record.xml
+++ b/livingExpenseRecord/app/src/main/res/layout/activity_record.xml
@@ -7,7 +7,13 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent">
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:background="@color/cyanA400"/>
+    </android.support.v4.view.ViewPager>
 </RelativeLayout>
 
