--- a/livingExpenseRecord/app/src/main/res/layout/fragment_record.xml
+++ b/livingExpenseRecord/app/src/main/res/layout/fragment_record.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
+    android:background="@drawable/cartoon_bear"
     >
     <LinearLayout
         android:layout_width="match_parent"
