--- a/livingExpenseRecord/app/src/main/res/layout/activity_record.xml
+++ b/livingExpenseRecord/app/src/main/res/layout/activity_record.xml
@@ -1,29 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
+    android:orientation="vertical"
+    >
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tab_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:background="@color/cyanA400"/>
-    </android.support.v4.view.ViewPager>
-
-    <android.support.design.widget.NavigationView
-        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/cyanA400"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"
+        />
+    <android.support.v4.widget.DrawerLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:id="@+id/navigation_view"
-        app:headerLayout="@layout/navi_header"
-        app:menu="@menu/navigation_drawer_menu"/>
-</android.support.v4.widget.DrawerLayout>
+        android:id="@+id/drawer_layout"
+        >
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tab_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="?attr/actionBarSize"
+                android:layout_gravity="top"
+                android:background="@color/cyanA400"/>
+        </android.support.v4.view.ViewPager>
+
+        <android.support.design.widget.NavigationView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:id="@+id/navigation_view"
+            app:headerLayout="@layout/navi_header"
+            app:menu="@menu/navigation_drawer_menu"/>
+    </android.support.v4.widget.DrawerLayout>
+</LinearLayout>
+
 
