--- a/livingExpenseRecord/app/src/main/res/layout/activity_record.xml
+++ b/livingExpenseRecord/app/src/main/res/layout/activity_record.xml
@@ -20,7 +20,7 @@
         android:id="@+id/drawer_layout"
         >
 
-        <android.support.v4.view.ViewPager
+        <org.chorior.pengzhen.livingexpenserecord.custom.JazzyViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -31,7 +31,7 @@
                 android:minHeight="?attr/actionBarSize"
                 android:layout_gravity="top"
                 android:background="@color/cyanA400"/>
-        </android.support.v4.view.ViewPager>
+        </org.chorior.pengzhen.livingexpenserecord.custom.JazzyViewPager>
 
         <android.support.design.widget.NavigationView
             android:layout_width="wrap_content"
